# daily-digest

./: .env.example  .gitignore  config.py  daily_run.py  digest-2026-03-22.html  digest-2026-03-22.json  digest-2026-03-23.html  digest-2026-03-23.json  digest-2026-03-24.html  digest-2026-03-24.json  digest-2026-03-25.html  digest-2026-03-25.json  digest-2026-03-26.html  digest-2026-03-26.json  digest-2026-03-27.html  digest-2026-03-27.json  digest-2026-03-28.html  digest-2026-03-28.json  digest-2026-03-29.html  digest-2026-03-29.json  digest-2026-03-30.html  digest-2026-03-30.json  digest-2026-03-31.html  digest-2026-03-31.json  digest-2026-04-01.html  digest-2026-04-01.json  digest-2026-04-02.html  digest-2026-04-02.json  digest-2026-04-03.html  digest-2026-04-03.json  digest-2026-04-04.html  digest-2026-04-04.json  digest-2026-04-05.html  digest-2026-04-05.json  digest-2026-04-06.html  digest-2026-04-06.json  digest-2026-04-07.html  digest-2026-04-07.json  digest-2026-04-08.html  digest-2026-04-08.json  (+51 more)
.github/workflows/: daily-digest.yml
docs/architecture/: .last_analysis_commit  changelog.md  config-deploy.md  modules.md  overview.md
pipeline/: __init__.py  content_fetcher.py  dedup.py  ranker.py  summarizer.py
scrapers/: __init__.py  cn_rss.py  devto.py  github_trending.py  hackernews.py  kr36.py  lobsters.py  producthunt.py  reddit.py  rss_feeds.py  rsshub.py  twitter_kol.py  v2ex.py  youtube.py
